[project]
name = "pilk-dn-log"
version = "2.0.0"
description = "Delta-Neutral Trade Logger with TUI and Binance integration"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "ccxt>=4.0.0",
    "rich>=13.0.0",
]

[project.scripts]
dn-log = "pilk_dn_log.tui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
